[nim, francis, naval] [#100136186] fixed table text alignment

--- a/eums/client/less/general.less
+++ b/eums/client/less/general.less
@@ -403,3 +403,6 @@ h4.page-header {
   }
 }
 
+.centered{
+  text-align: center;
+}
